--- a/projects/kyawmyis/quiz/makefile
+++ b/projects/kyawmyis/quiz/makefile
@@ -2,6 +2,6 @@ testme:
 	gcc -o testme testme.c -Wall -std=c99 -coverage -fpic -lm
 
 clean:
-	rm -r testme testme.gcno
+	rm -r testme testme.gcno testme.gcda
 
 
