added Dan's changes

--- a/projects/FinalProject-Bugs/Makefile
+++ b/projects/FinalProject-Bugs/Makefile
@@ -22,10 +22,21 @@ runtests: testDrawCard
 	cat dominion.c.gcov >> unittestresult.out
 
 
+unittestresults: unittest1mine.c unittest2mine.c unittest3remodel.c unittest4gameover.c dominion.o interface.o rngs.o
+	gcc -o UnitTestBug1 unittest1mine.c dominion.o rngs.o interface.o $(CFLAGS)
+	gcc -o UnitTestBug2 unittest2mine.c dominion.o rngs.o interface.o $(CFLAGS)
+	gcc -o UnitTestBug3 unittest3remodel.c dominion.o rngs.o interface.o $(CFLAGS)
+	gcc -o UnitTestBug4 unittest4gameover.c dominion.o rngs.o interface.o $(CFLAGS)
+	./UnitTestBug1
+	./UnitTestBug2
+	./UnitTestBug3
+	./UnitTestBug4
+	gcov dominion.c -b -f >> unittestresults.out
+
 player: player.c interface.o
 	gcc -o player player.c -g  dominion.o rngs.o interface.o $(CFLAGS)
 
 all: playdom player 
 
 clean:
-	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe
+	rm -f *.o playdom.exe playdom player player.exe  *.gcov *.gcda *.gcno *.so *.out testDrawCard testDrawCard.exe UnitTestBug*
