--- a/projects/FinalProject-Bugs/Makefile
+++ b/projects/FinalProject-Bugs/Makefile
@@ -36,6 +36,12 @@ UnitTestBug4: unittest4gameover.c dominion.o interface.o rngs.o
 UnitTestBug5: unittest5.c dominion.o rngs.o
 	gcc -o UnitTestBug5 unittest5.c dominion.o rngs.o $(CFLAGS)
 
+UnitTestBug6: unittest6.c dominion.o rngs.o
+	gcc -o UnitTestBug6 unittest6.c dominion.o rngs.o $(CFLAGS)
+
+UnitTestBug7: unittest7.c dominion.o rngs.o
+	gcc -o UnitTestBug7 unittest7.c dominion.o rngs.o $(CFLAGS)
+
 UnitTestBug8: unittest8.c dominion.o rngs.o
 	gcc -o UnitTestBug8 unittest8.c dominion.o rngs.o $(CFLAGS)
 
@@ -45,12 +51,14 @@ UnitTestBug9: unittest9.c dominion.o rngs.o
 UnitTestBug10: unittest10.c dominion.o rngs.o
 	gcc -o UnitTestBug10 unittest10.c dominion.o rngs.o $(CFLAGS)
 
-unittestresults: UnitTestBug1 UnitTestBug2 UnitTestBug3 UnitTestBug4 UnitTestBug5 UnitTestBug8 UnitTestBug9 UnitTestBug10
+unittestresults: UnitTestBug1 UnitTestBug2 UnitTestBug3 UnitTestBug4 UnitTestBug5 UnitTestBug6 UnitTestBug7 UnitTestBug8 UnitTestBug9 UnitTestBug10
 	./UnitTestBug1 >> unittestresults.out
 	./UnitTestBug2 >> unittestresults.out
 	./UnitTestBug3 >> unittestresults.out
 	./UnitTestBug4 >> unittestresults.out
 	./UnitTestBug5 >> unittestresults.out
+	./UnitTestBug6 >> unittestresults.out
+	./UnitTestBug7 >> unittestresults.out
 	./UnitTestBug8 >> unittestresults.out
 	./UnitTestBug9 >> unittestresults.out
 	./UnitTestBug10 >> unittestresults.out
